# template_Django_Ninja_CRUD_API

./: DjangoNinjaBasicAPI.postman_collection  README.md  pyproject.toml
iamaninja/: manage.py
iamaninja/crud/: api.py  models.py  urls.py
iamaninja/crud/migrations/: 0001_initial.py  0002_alter_employee_department.py
iamaninja/iamaninja/: api.py  asgi.py  settings.py  urls.py  wsgi.py
